# Task-Management-API

./: .env.example  .gitignore  Dockerfile  README.md  main.py  pyproject.toml  tasks.db
auth/: auth_service.py  auth_utils.py
database/: db_setup.py
models/: category.py  task.py  user.py
routes/: auth.py  category.py  task.py
schemas/: category.py  task.py  user.py
services/: task.py
