[project]
name = "task-management-api"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.13"
dependencies = [
    "bcrypt>=5.0.0",
    "fastapi[standard]>=0.118.0",
    "jose>=1.0.0",
    "passlib>=1.7.4",
    "pyjwt>=2.10.1",
    "pytest>=8.4.2",
    "python-jose>=3.5.0",
    "sqlalchemy>=2.0.43",
]
